src/test/ui/suggestions/shadowed-lplace-method.stderr
error[E0308]: mismatched types
  --> $DIR/shadowed-lplace-method.rs:9:24
   |
LL |     *rc.borrow_mut() = false;
   |     ----------------   ^^^^^ expected struct `Rc`, found `bool`
   |     |
   |     expected due to the type of this binding
   |
   = note: expected struct `Rc<RefCell<bool>>`
                found type `bool`
note: there are multiple methods with the same name, `borrow_mut` refers to `std::borrow::BorrowMut::borrow_mut` in the method call
  --> $DIR/shadowed-lplace-method.rs:9:9
   |
LL |     *rc.borrow_mut() = false;
   |         ^^^^^^^^^^ refers to `std::borrow::BorrowMut::borrow_mut`
help: you might have meant to invoke a different method, you can use the fully-qualified path
   |
LL |     *std::cell::RefCell::<_>::borrow_mut(&rc) = false;
   |      +++++++++++++++++++++++++++++++++++++  ~

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
